[package]
name = "trb"
version = "0.1.0"
authors = ["Heinz N. Gies <heinz@licenser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "*"
core_affinity = "*"

[patch.crates-io]
# crossbeam-channel = { path = '../crossbeam/crossbeam-channel' }
